Fix(App): Added support for updating yt-dlp if it is outdated